evaluation-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  labels:
    app: evaluation-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: evaluation-service
  sessionAffinity: None
